<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loading"
    android:layout_width="@dimen/alert_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">
    <!--custom_image-->
    <ImageView
        android:id="@+id/custom_image"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:visibility="gone" />
    <!--Error-->
    <FrameLayout
        android:id="@+id/error_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone">

        <cn.pedant.control.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&#xf00d;"
            android:textColor="#ff715b"
            android:textSize="31sp"
            app:customFont="@string/customFont_FontAwesome" />


    </FrameLayout>
    <!--Success-->
    <FrameLayout
        android:id="@+id/success_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone">

        <cn.pedant.control.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&#xf00c;"
            android:textColor="#8fd226"
            android:textSize="31sp"
            app:customFont="@string/customFont_FontAwesome" />


    </FrameLayout>
    <!--Warning-->
    <FrameLayout
        android:id="@+id/warning_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone">

        <cn.pedant.control.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&#xf071;"
            android:textColor="#ffac2c"
            android:textSize="31sp"
            app:customFont="@string/customFont_FontAwesome" />
    </FrameLayout>
    <!--Loading-->
    <FrameLayout
        android:id="@+id/progress_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/WhiteAccent" />
    </FrameLayout>

    <cn.pedant.control.AppTextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:ellipsize="end"
        android:textColor="@color/lib_default_text_black_color"
        android:textSize="14sp"
        app:customFont="@string/customFont_OpenSans_Semibold" />

    <cn.pedant.control.AppTextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#797979"
        android:textSize="14sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:weightSum="2">

        <cn.pedant.control.AppButton
            android:id="@+id/cancel_button"
            style="@style/dialog_blue_button"
            android:layout_marginRight="10dp"
            android:background="@drawable/gray_button_background"
            android:text="@string/dialog_cancel"
            android:visibility="gone" />

        <cn.pedant.control.AppButton
            android:id="@+id/confirm_button"
            style="@style/dialog_blue_button"
            android:text="@string/dialog_ok" />
    </LinearLayout>

</LinearLayout>